# csgo-winner-prediction

./: README.md  Raport.ipynb  pyproject.toml
