[tool.poetry]
name = "csgo-round-prediction"
version = "0.1.0"
description = ""
authors = ["Jakub Michalak <michalakjakub1999@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.*"
jupyter = "^1.0.0"
numpy = "^1.22.3"
pandas = "^1.4.1"
seaborn = "^0.11.2"
scikit-learn = "^1.0.2"
optuna = "^2.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
